--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,13 @@
          <h3>Ingresa tu nombre</h3>
          <input type="text" id="nombre">
          <button onclick="">Entrar</button>
-      	
+      
+        <div
+          class="fb-like"
+          data-share="true"
+          data-width="450"
+          data-show-faces="true">
+        </div>
       </div>
 
 	  <h1>LOCA!!!</h1>
@@ -23,6 +29,29 @@
 	  	<small style="font-size: 10px;">Si haces uso de este chat aceptas el...</small>
 	  </p>
 	  <ul id="lista_mensajes"></ul>
+
+
+
+
+
+  <script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '151482731923828',
+      xfbml      : true,
+      version    : 'v2.6'
+    });
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
+
 
 
 
